--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angularfire2": "^5.2.1",
     "core-js": "^2.4.1",
     "firebase": "^6.2.4",
     "rxjs": "^5.5.6",
