--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "angularfire2": "^5.2.1",
     "core-js": "^2.4.1",
     "firebase": "^6.2.4",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.19"
   },
