--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "lemon-pie",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "10.15.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o --port 5200",
