--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": "10.15.0"
+	"node": "10.15.0",
+	"npm": "6.5.0"
   },
   "scripts": {
     "ng": "ng",
