--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "^8.2.2",
     "@angular/router": "^8.2.2",
+    "angular-notifier": "^6.0.1",
     "angularfire2": "^5.2.1",
     "core-js": "^3.2.1",
     "firebase": "^6.4.0",
