--- a/package.json
+++ b/package.json
@@ -16,32 +16,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.802.2",
-    "@angular/animations": "^8.2.2",
-    "@angular/cli": "^8.2.2",
-    "@angular/common": "^8.2.2",
-    "@angular/compiler": "^8.2.2",
-    "@angular/core": "^8.2.2",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/animations": "^9.1.4",
+    "@angular/cli": "^9.1.4",
+    "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.1.4",
+    "@angular/core": "^9.1.4",
     "@angular/fire": "^5.2.1",
-    "@angular/forms": "^8.2.2",
-    "@angular/platform-browser": "^8.2.2",
-    "@angular/platform-browser-dynamic": "^8.2.2",
-    "@angular/router": "^8.2.2",
+    "@angular/forms": "^9.1.4",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/router": "^9.1.4",
     "angular-notifier": "^6.0.1",
     "core-js": "^3.2.1",
     "firebase": "^6.4.0",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^8.2.2",
-    "@angular/language-service": "^8.2.2",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~12.7.2",
-    "codelyzer": "^5.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
@@ -52,6 +52,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   }
 }
