--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/animations": "^9.1.4",
     "@angular/cli": "^9.1.4",
     "@angular/common": "^9.1.4",
