--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-notifier": "^6.0.1",
     "core-js": "^3.2.1",
     "firebase": "^6.4.0",
+    "firebase-tools": "^8.4.3",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.10.0",
