--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,8 @@
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
-    "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
